--- a/src/stv-help-menu.html
+++ b/src/stv-help-menu.html
@@ -79,6 +79,7 @@
                 }
             },
             ready: function() {
+                console.warn("THIS FILE IS DEPRECATED USE STV-DROPDOWN instead.");
                 var me = this;
                 var bcrdm = me.$.dropmenu.getBoundingClientRect();
                 this.$.dropmenu.style.width = this.menuWidth + 'px';
