--- a/src/file/stv-folder-tree-item.html
+++ b/src/file/stv-folder-tree-item.html
@@ -55,11 +55,16 @@
         .name {
             padding: 2px 2px 2px 0;
         }
+
+        .name.dragover {
+            background-color: var(--accent-color);
+            color: var(--text-primary-color);
+        }
     </style>
     <template>
         <div class="main horizontal layout stv-nosel">
             <div class="arrow" empty$="{{isEmpty(file.f)}}" open$="{{file.open}}" on-click="handleArrowClick"></div>
-            <div class="name flex" on-click="handleClick" on-dblclick="handleDblclick">{{computeName(file.n)}}</div>
+            <div id="name" class="name flex" on-click="handleClick" on-dblclick="handleDblclick">{{computeName(file.n)}}</div>
         </div>
         <div style="margin-left:7px;" hidden$="{{!file.open}}">
             <template is="dom-repeat" items="{{file.f}}" as="f">
@@ -78,7 +83,8 @@
             },
             listeners: {
                 'drop': 'handleDrop',
-                'dragover': 'allowDrop'
+                'dragover': 'handleDragOver',
+                'dragleave': 'handleDragLeave'
             },
             isEmpty: function(f) {
                 return f.length == 0;
@@ -105,15 +111,25 @@
                     this.set('file.open', !this.file.open);
                 }
             },
-            allowDrop: function(e) {
+            handleDragOver: function(e) {
                 e.preventDefault();
-                console.log("allow drop 2");
+                e.stopPropagation();
+                // console.log("Drag over");
+                this.$.name.classList.add('dragover');
+            },
+            handleDragLeave: function(e) {
+                e.preventDefault();
+                e.stopPropagation();
+                this.$.name.classList.remove('dragover');
             },
             handleDrop: function(e) {
+                this.$.name.classList.remove('dragover');
                 e.preventDefault();
-                console.log("DROP");
+                e.stopPropagation();
+                // console.log("FOLDER TREE ITEM DROP");
                 var newParentId = e.currentTarget.file._id;
-                console.log(newParentId);
+                console.log(e.currentTarget.file.path + " -> " + newParentId);
+                // console.log(newParentId);
                 SteviaManager.files.move({
                     query: {
                         sid: Cookies("bioinfo_sid"),
