--- a/src/validator/stv-validator.html
+++ b/src/validator/stv-validator.html
@@ -6,6 +6,8 @@
 <script src="../../../client-line-navigator/file-navigator.js"></script>
 <script src="validator.js"></script>
 <script src="vcf-validator.js"></script>
+<script src="expression-validator.js"></script>
+<script src="experimental-design-validator.js"></script>
 
 <dom-module name="stv-validator" noscript>
     <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning">
