--- a/src/stv-remember.html
+++ b/src/stv-remember.html
@@ -34,7 +34,7 @@
     <template>
         <div class="title">
             <div>
-                Remember password
+                Reset password
             </div>
             <div class="icon color-2">
                 <i class="fa fa-life-ring"></i>
