--- a/src/file/stv-folder-tree-item.html
+++ b/src/file/stv-folder-tree-item.html
@@ -24,12 +24,20 @@
             background-color: var(--hover-color)
         }
 
-        .name:before {
+        .folder:before {
             font-family: "FontAwesome";
             display: inline-block;
             width: 20px;
             text-align: center;
             content: '\f07b';
+        }
+
+        .fOpen:before {
+            font-family: "FontAwesome";
+            display: inline-block;
+            width: 20px;
+            text-align: center;
+            content: '\f07c';
         }
 
         .arrow:before {
@@ -64,7 +72,7 @@
     <template>
         <div class="main horizontal layout stv-nosel">
             <div class="arrow" empty$="{{isEmpty(file.f)}}" open$="{{file.open}}" on-click="handleArrowClick"></div>
-            <div id="name" class="name flex" on-click="handleClick" on-dblclick="handleDblclick">{{computeName(file.n)}}</div>
+            <div id="name" class$="{{computeClass(file.open)}}" on-click="handleClick" on-dblclick="handleDblclick">{{computeName(file.n)}}</div>
         </div>
         <div style="margin-left:7px;" hidden$="{{!file.open}}">
             <template is="dom-repeat" items="{{fileItems}}" as="f">
@@ -168,6 +176,13 @@
                     }
                 });
                 this.fire('need-refresh');
+            },
+            computeClass: function(open) {
+                if (open == true) {
+                    return "fOpen name flex"
+                } else {
+                    return "folder name flex"
+                }
             }
         });
     </script>
