--- a/src/validator/stv-validator.html
+++ b/src/validator/stv-validator.html
@@ -23,14 +23,15 @@
             box-sizing: border-box;
             background-color: var(--light-secondary-color);
             padding: 0 7px;
-            height: 24px;
         }
 
         #header {
+            height: 30px;
             border-bottom: 1px solid var(--divider-color);
         }
 
         #footer {
+            height: 24px;
             border-top: 1px solid var(--divider-color);
         }
 
@@ -40,6 +41,16 @@
 
         .type {
             width: 60px;
+        }
+
+        #stop {
+            margin-left: 7px;
+            background-color: var(--dark-button-color);
+            color: var(--text-primary-color);
+        }
+
+        #stop:hover {
+            background-color: var(--light-button-color);
         }
 
         .type[type="error"],
@@ -112,7 +123,7 @@
 
         #log {
             position: relative;
-            height: calc(100% - 48px);
+            height: calc(100% - 54px);
             overflow-y: auto;
             /*background-color: #FAFAFA;*/
             background-color: white;
@@ -171,7 +182,17 @@
         <div id="header" class="horizontal layout center">
             <div class="line">Line </div>
             <div class="type">Type</div>
-            <div class="msg flex">Message</div>
+            <div class="msg">Message</div>
+            <div class="flex"></div>
+            <div class="uploadbar" hidden$="{{!uploading}}">
+                <div id="progressBar" class="uploadprogress"></div>
+                <div class="uploadtext">
+                    <i id="spin" hidden$="{{computeSpin(progress)}}" class="fa fa-spinner fa-spin"></i>
+                    <span>{{progress}}</span> %
+                </div>
+                <br>
+            </div>
+            <div id="stop" class="stv-btn stv-btn-shdw" on-click="handleStop">Stop</div>
         </div>
         <iron-list id="log" items="[[log]]" as="item">
             <template>
@@ -193,17 +214,9 @@
             <div class="info-count count">Info:
                 <span>{{infoCount}}</span>
             </div>
+            <div class="flex"></div>
             <div class="count">Lines:
                 <span>{{numLines}}</span>
-            </div>
-            <div class="flex"></div>
-            <div class="uploadbar" hidden$="{{!uploading}}">
-                <div id="progressBar" class="uploadprogress"></div>
-                <div class="uploadtext">
-                    <i hidden$="{{computeSpin(progress)}}" class="fa fa-spinner fa-spin"></i>
-                    <span>{{progress}}</span> %
-                </div>
-                <br>
             </div>
         </div>
 
@@ -282,6 +295,14 @@
                 this.numLines = 0;
                 this.validator.validate();
             },
+            handleStop: function(e) {
+                this.stop();
+            },
+            stop: function() {
+                if (this.validator) {
+                    this.validator.stop();
+                }
+            },
             setFile: function(file) {
                 this.fileChanged(file);
             },
@@ -294,6 +315,11 @@
 
                 neo.on("err", function(e) {
                     me.fire("err");
+                });
+
+                neo.on("stop", function(e) {
+                    me.$.spin.setAttribute('hidden', '');
+                    me.fire("stop");
                 });
 
                 neo.on("log", function(e) {
