--- a/src/validator/stv-validator.html
+++ b/src/validator/stv-validator.html
@@ -326,6 +326,10 @@
                     switch (e.type) {
                         case "error":
                             me.errorCount++;
+                            if (me.errorCount == 100) {
+                                me.stop();
+                                alert('File has more than 100 errors, the validation is stopped');
+                            }
                             break;
                         case "warning":
                             me.warningCount++;
