Validator reader fixes.

--- a/src/file/stv-file-browser.html
+++ b/src/file/stv-file-browser.html
@@ -181,7 +181,7 @@
             <content id="customButtons" select=".custom-button"></content>
         </div>
 
-        <stv-panel modal movable closable hidden id="uploadFilePanel">
+        <stv-panel modal fixed movable closable hidden id="uploadFilePanel">
             <div class="header">
                 <i class="fa fa-cloud-upload"></i> &nbsp; Upload file
             </div>
