--- a/src/file/stv-file-preview.html
+++ b/src/file/stv-file-preview.html
@@ -90,6 +90,7 @@
             }
         },
         handleScroll: function(e) {
+            e.stopPropagation();
             var el = e.currentTarget;
             if (el.offsetHeight + el.scrollTop >= el.scrollHeight) {
                 if (!this._end) {
