--- a/src/file/stv-folder-list.html
+++ b/src/file/stv-folder-list.html
@@ -182,7 +182,7 @@
             </div>
         </div>
 
-        <stv-panel modal closable hidden id="createFolderModal">
+        <stv-panel modal fixed closable hidden id="createFolderModal">
             <div class="header"><i class="fa fa-folder"></i> &nbsp; Create folder</div>
             <stv-folder-create class="container" id="createfolder" on-folder-created="handleFolderCreated" folder="{{folder}}">
             </stv-folder-create>
