--- a/src/stv-launcher/stv-launcher.html
+++ b/src/stv-launcher/stv-launcher.html
@@ -18,6 +18,10 @@
                 box-shadow: 0 2px 10px rgba(0,0,0,.2)
                 opacity: 0;
                 padding : 10px 10px 10px 10px;
+
+                width: 460px;
+                max-height: 70vh;
+                overflow-y: scroll;
             }
 
             .button {
@@ -25,6 +29,8 @@
                 color: white;
                 text-align: center;
                 border: transparent solid 1px;
+                width: 120px;
+                height: 120px;
             }
 
             .button:hover {
@@ -43,6 +49,12 @@
         </style>
         <content id="icon"></content>
         <div id="dropdown" hidden class="layout horizontal wrap around-justified">
+            <template is="dom-repeat" items="{{_applicationsList}}">
+                <div class="button layout vertical around-justified center">
+                    <img src="{{item.icon}}" alt="" class="icon">
+                    <span>{{item.name}}</span>
+                </div>
+            </template>
         </div>
     </template>
     <script>
@@ -56,11 +68,12 @@
             },
 
             ready: function(){
-                var icon = Polymer.dom(this).children[0];
+                var icon = Polymer.dom(this).children[0]; // Select the icon established as button
                 this._getAppInfo();
 
-                Polymer.dom(this).setAttribute("tabindex", -1);
                 icon.addEventListener("click", this._toogle.bind(this));
+                
+                Polymer.dom(this).setAttribute("tabindex", -1); // To make blur work
                 this.addEventListener("blur", this._hide.bind(this));
             },
 
@@ -70,7 +83,6 @@
                 if(dropdown.hidden){
                     dropdown.removeAttribute("hidden");
                     this._fadeIn(dropdown);
-                    this._setAppsDivWidth();
                 } else {
                     dropdown.setAttribute("hidden", true);
                     dropdown.style.opacity = 0;
@@ -90,43 +102,10 @@
 
                 request.addEventListener("load", function(){
                     that._applicationsList = JSON.parse(this.responseText);
-                    that._writeApps();
                 });
 
                 request.open("GET", this.dataSrc);
                 request.send();
-            },
-
-            _writeApps: function(){
-                this._applicationsList.forEach(function(element){
-
-                    var newListItem;
-                    if(element.icon !== ""){
-                        newListItem = document.createElement("img");
-                        newListItem.src = element.icon;
-                    } else {
-                        newListItem = document.createElement("i");
-                        newListItem.className = "fa fa-empire";
-                    }
-                    newListItem.className += " icon";
-
-                    var appName = document.createElement("span");
-                    Polymer.dom(appName).textContent = element.name
-
-                    var button = document.createElement("div");
-                    button.className = "button layout vertical around-justified center";
-
-                    Polymer.dom(button).appendChild(newListItem);
-                    Polymer.dom(button).appendChild(appName);
-                    Polymer.dom(this.$.dropdown).appendChild(button);
-
-                    // Open link in a new tab
-                    button.addEventListener("click", function(){
-                        var win = window.open(element.link, "_blank");
-                        win.focus();
-                    })
-
-                }, this);
             },
 
              _fadeIn: function(el) {
@@ -155,27 +134,6 @@
                 }else if(dropdownBCR.left - calcMargin >= 0){
                    this.$.dropdown.style.marginLeft = (- calcMargin) + "px";
                 }
-            },
-
-            _setAppsDivWidth: function() {
-                var appsDivs = Polymer.dom(this.$.dropdown).querySelectorAll("div");
-
-                var maxWidth = 0;
-
-                appsDivs.forEach(function(element){
-                   var appDivWidth = element.getBoundingClientRect().width;
-
-                    maxWidth = appDivWidth > maxWidth ? appDivWidth : maxWidth;
-                });
-
-                maxWidth = maxWidth + 5;
-
-                appsDivs.forEach(function(element){
-                    element.style.width = maxWidth + "px";
-                    element.style.height = maxWidth + "px";
-                });
-
-                this.$.dropdown.style.width = (maxWidth * 3.3) + "px";
             }
         })
     </script>
